--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* TA Paul Qwik helped guide me on what to leave and what to delete */
+
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
@@ -32,17 +34,17 @@ body {
   
   .past {
     background-color: #d3d3d3;
-    color: white;
+    color: black;
   }
   
   .present {
     background-color: #ff6961;
-    color: white;
+    color: black;
   }
   
   .future {
     background-color: #77dd77;
-    color: white;
+    color: black;
   }
   
   .saveBtn {
@@ -57,4 +59,3 @@ body {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
-  
